[package]
name = "duduclaw-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
duduclaw-core = { workspace = true }
duduclaw-auth = { workspace = true }
duduclaw-agent = { workspace = true }
duduclaw-fork = { workspace = true }
duduclaw-memory = { workspace = true }
duduclaw-security = { workspace = true }
duduclaw-container = { workspace = true }
duduclaw-odoo = { workspace = true }
duduclaw-identity = { workspace = true }
duduclaw-redaction = { workspace = true }
duduclaw-cli-runtime = { workspace = true }
duduclaw-cli-worker = { workspace = true }
duduclaw-license = { workspace = true }
duduclaw-os = { workspace = true }
duduclaw-llm = { workspace = true }
duduclaw-sandbox = { workspace = true }
thiserror = { workspace = true }
tokio-util = "0.7"
# Interactive CLI auth ("Dashboard 一鍵登入") drives each AI CLI's native login
# command in a PTY. Same crate the cli-runtime uses, so no new transitive deps.
portable-pty = "0.9"
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
# Comment-preserving TOML edits for premium team-template staging (already the
# engine underneath `toml` 0.8, so no new transitive deps).
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json", "multipart"] }
# Email channel — async SMTP send (rustls, aligns with the workspace TLS stack).
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
# Slack Socket Mode URL validation (already in the tree via reqwest — no new compile units)
url = "2"
# web_extract L2 CSS-selector extraction (same version as duduclaw-cli)
scraper = "0.22"
rusqlite = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
# WeCom (企業微信) callback crypto — SHA1 msg_signature + AES-256-CBC message
# envelope (wecom.rs). Both crates are already in Cargo.lock as transitive
# deps (sha1 via ring-adjacent stacks, aes via aes-gcm), so no new units.
sha1 = "0.10"
aes = "0.8"
base64 = { workspace = true }
# White-label About-block HTML sanitization (branding.rs §10.2).
ammonia = { workspace = true }
jsonwebtoken = "9"
ring = { workspace = true }
futures-util = { workspace = true }
tempfile = "3"
zeroize = "1"
unicode-normalization = "0.1"
flate2 = "1"
tar = "0.4"
dirs = "5"
hostname = "0.4"
# Self-update release-asset signature verification (updater.rs [S1])
minisign-verify = "0.2"
# A2A v1.0 signed Agent Card — EdDSA/JWS signing (a2a_signing.rs). Same crate
# convention as duduclaw-license; `rand_core` enables SigningKey::generate for
# first-run key material. Signing (not just verify) so full feature set here.
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }
rand = "0.8"

duduclaw-inference = { workspace = true }
duduclaw-desktop = { workspace = true, optional = true }
duduclaw-dashboard = { workspace = true, optional = true }
async-trait = { workspace = true }

# L5b native desktop control. Screen capture lives in `duduclaw-desktop`
# (OS-native tool shell-out); the gateway no longer needs `xcap` directly.
enigo = { version = "0.3", features = ["serde"], optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
hex = "0.4"
openssl-sys = { version = "0.9", optional = true }

[target.'cfg(windows)'.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

# Discord voice channel support (Songbird)
songbird = { version = "0.5", optional = true, features = ["driver", "rustls", "receive"] }

# OpenTelemetry GenAI tracing + OTLP export (feature "otel", default OFF —
# zero deps / zero overhead when disabled; spans are plain `tracing` either
# way, the feature only compiles the OTLP export layer in src/otel.rs).
# grpc-tonic transport (default) keeps us off reqwest 0.13 (otlp's http default
# would duplicate the gateway's reqwest 0.12). tls-webpki-roots supports HTTPS
# gRPC collectors (Langfuse/Grafana Cloud). Mutually-compatible 0.32/0.33 set.
opentelemetry = { version = "0.32", default-features = false, features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["trace"], optional = true }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "grpc-tonic", "tls-webpki-roots"], optional = true }
tracing-opentelemetry = { version = "0.33", default-features = false, optional = true }
# Already in the otel tree via opentelemetry-otlp's grpc-tonic transport; named
# directly only for tonic::metadata::MetadataKey (non-panicking header insert).
tonic = { version = "0.14", default-features = false, optional = true }

[features]
default = ["dashboard", "desktop"]
desktop = ["dep:duduclaw-desktop", "dep:enigo"]
dashboard = ["dep:duduclaw-dashboard"]
vendored-openssl = ["openssl-sys/vendored"]
metal = ["duduclaw-inference/metal"]
cuda = ["duduclaw-inference/cuda"]
vulkan = ["duduclaw-inference/vulkan"]
mistralrs-metal = ["duduclaw-inference/mistralrs-metal"]
mistralrs-cuda = ["duduclaw-inference/mistralrs-cuda"]
discord-voice = ["dep:songbird"]
# OpenTelemetry GenAI tracing + OTLP export (see src/otel.rs). Default OFF.
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:tonic",
]

[dev-dependencies]
tempfile = "3"
# P2 license control-plane integration tests need to name the license types and
# encode signatures against the clean (non-test) lib build.
duduclaw-license = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }
rand = "0.8"
