[package]
name = "duduclaw-memory"
version.workspace = true
edition.workspace = true

[dependencies]
duduclaw-core = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
csv = "1"
toml = { workspace = true }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
