[package]
name = "duduclaw-odoo"
version.workspace = true
edition.workspace = true

[dependencies]
duduclaw-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
