[package]
name = "duduclaw-security"
version.workspace = true
edition.workspace = true

[dependencies]
duduclaw-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
